# intervals

./: CMakeLists.txt  LICENSE  README.md
include/intervals/: attributes.h  endpoint_type.h  interval.h  map.h  set.h  tree.h
include/intervals/traits/: array_map.h  array_set.h  std_map.h  std_set.h
tests/: CMakeLists.txt  intervals.cpp  main.cpp
